--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
 											<span class="menu-title"> Computer </span>
 											<i class="angle-right-icon fw-bold fa fa-angle-right"></i>
 										</a>
-										<div class="dropdown-content">
+										<div class="animated-slideIn dropdown-content">
 											<ul class="computer-dropdown list-unstyled fw-normal fs-14 text-start px-2 text-white">
-												<li class="mt-3 py-1"><a href="#" class="text-black text-decoration-none">Faqs</a></li>
+												<li class="mt-2 py-1"><a href="#" class="text-black text-decoration-none">Faqs</a></li>
 												<li class="py-1"><a href="#" class="text-black text-decoration-none">Blog</a></li>
 												<li class="py-1"><a href="#" class="text-black text-decoration-none">Contact</a></li>
 												<li class="py-1"><a href="#" class="text-black text-decoration-none">About Us</a></li>
@@ -301,7 +301,7 @@
 											<span class="menu-title">Shop</span>
 											<i class="angle-right-iconn fw-bold fa fa-angle-right"></i>
 										</a>
-										<div class="dropdown-content">
+										<div class="animated-slideInn dropdown-content">
 											<div class="row drop-d">
 												<div class="col-md-4">
 													<ul class="computer-dropdown list-unstyled fw-normal fs-14 text-start px-2 text-white">
@@ -385,11 +385,11 @@
 										<a class="text-decoration-none text-dark" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">
 											<i class="fa fa-microphone"></i>
 											<span class="menu-title">Home Audio & Theater</span>
-											<i class="ps-4 ms-2 fw-bold fa fa-angle-right"></i>
+											<i class="ps-4 fw-bold fa fa-angle-right"></i>
 										</a>
-										<div class="dropdown-content">
+										<div class="animated-slideIn dropdown-content">
 											<ul class="computer-dropdown list-unstyled fw-normal fs-14 text-start px-2 text-white">
-												<li class="mt-3 py-1"><a href="#" class="text-black text-decoration-none">Faqs</a></li>
+												<li class="mt-2 py-1"><a href="#" class="text-black text-decoration-none">Faqs</a></li>
 												<li class="py-1"><a href="#" class="text-black text-decoration-none">Blog</a></li>
 												<li class="py-1"><a href="#" class="text-black text-decoration-none">Contact</a></li>
 												<li class="py-1"><a href="#" class="text-black text-decoration-none">About Us</a></li>
@@ -635,45 +635,47 @@
 										<div class="carousel-item active">
 											<img src="src/images/slide-1-1.jpg" class="d-block w-100 position-relative" alt="First Slide" />
 											<div class="caption position-absolute">
-												<h2 class="text-uppercase my-3">MEN COLLECTIONS</h2>
-												<p class="text-muted mb-4 text-capitalize">The 10 best men collection 2018</p>
-												<div class="d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
+												<h2 id="h2" class="animated bounce text-uppercase my-3">MEN COLLECTIONS</h2>
+												<p id="p" class="delay-1 bounce text-muted mb-4 text-capitalize">The 10 best men collection 2018</p>
+												<div id="btn-pill" class="delay-2 bounce d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">
+													View Now
+												</div>
 											</div>
 										</div>
 										<!-- Slide 2 -->
 										<div class="carousel-item">
 											<img src="src/images/slide-2.jpg" class="d-block w-100 position-relative" alt="Second Slide" />
 											<div class="caption position-absolute">
-												<h2 class="text-uppercase my-3">Electronics</h2>
-												<p class="text-muted mb-4">
+												<h2 class="animated bounce text-uppercase my-3">Electronics</h2>
+												<p class="delay-1 bounce text-muted mb-4">
 													Lorem Ipsum is simply dummy text of <br />
 													the printing and typesetting industry
 												</p>
-												<div class="d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
+												<div class="delay-2 bounce d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
 											</div>
 										</div>
 										<!-- Slide 3 -->
 										<div class="carousel-item">
 											<img src="src/images/slide-3.jpg" class="d-block w-100 position-relative" alt="Third Slide" />
 											<div class="caption position-absolute">
-												<h2 class="text-uppercase my-3">Clothing</h2>
-												<p class="text-muted mb-4">
+												<h2 class="animated bounce text-uppercase my-3">Clothing</h2>
+												<p class="delay-1 bounce text-muted mb-4">
 													It is a long established fact that a reader <br />
 													will be distracted
 												</p>
-												<div class="d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
+												<div class="delay-2 bounce d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
 											</div>
 										</div>
 										<!-- Slide 4 -->
 										<div class="carousel-item">
 											<img src="src/images/slide-4.jpg" class="d-block w-100 position-relative" alt="Fourth Slide" />
 											<div class="caption position-absolute">
-												<h2 class="text-uppercase my-3">WHAT NEW?</h2>
-												<p class="text-muted mb-4">
+												<h2 class="animated bounce text-uppercase my-3">WHAT NEW?</h2>
+												<p class="delay-1 bounce text-muted mb-4">
 													The 1958 moulded plywood armchair <br />
 													by Norman Cherner.
 												</p>
-												<div class="d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
+												<div class="delay-2 bounce d-inline-block px-4 py-1 rounded-pill btn text-uppercase text-primary border-primary">View Now</div>
 											</div>
 										</div>
 									</div>
@@ -759,7 +761,7 @@
 						</div>
 						<!-- Top Categories Carousel -->
 						<div class="row block-product clearfix">
-							<h3 class="d-inline-block mt-4 px-0 sections-title border-bottom">Top Categories</h3>
+							<h3 class="d-inline-block mt-3 px-0 sections-title border-bottom">Top Categories</h3>
 							<!-- <div class="d-inline-block arrows pull-right">
 								<i class="text-dark fa fa-angle-left"></i>
 								<i class="text-dark fa fa-angle-right"></i>
