Validation errors removed

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<body>
 		<!-- Promotional Image -->
 		<div class="container-fluid promotional-image">
-			<img class="position-relative w-100" src="src/images/img-promotion_2048x.jpg" alt="Promotional Image here" class="img-fluid" />
-			<h5 class="close-btn position-absolute mt-3 mx-4 top-0 end-0 fw-bold pull-right">&times</h5>
+			<img class="position-relative w-100" src="src/images/img-promotion_2048x.jpg" alt="Promotional Image here" />
+			<h5 class="close-btn position-absolute mt-3 mx-4 top-0 end-0 fw-bold pull-right">&times;</h5>
 		</div>
 
 		<!-- Min-header -->
@@ -1310,9 +1310,7 @@
 								<div class="card pt-0">
 									<img class="d-block w-100 position-relative" src="src/images/three-1.jpg" alt="Image here" />
 									<div class="caption position-absolute">
-										<h6 class="text-primary">
-											$645.00 <span class="text-muted fw-light"><strike>$759.99</strike></span>
-										</h6>
+										<h6 class="text-primary">$645.00 <span class="text-muted fw-light line-through">$759.99</span></h6>
 										<span class="text-capitalize fw-light d-inline-block mb-2"
 											>Sale Upto
 											<strong class="fw-bold">
@@ -1330,9 +1328,7 @@
 								<div class="card pt-0">
 									<img class="d-block w-100 position-relative" src="src/images/three-2.jpg" alt="Image here" />
 									<div class="caption position-absolute">
-										<h6 class="text-primary">
-											$645.00 <span class="text-muted fw-light"><strike>$759.99</strike></span>
-										</h6>
+										<h6 class="text-primary">$645.00 <span class="text-muted fw-light line-through">$759.99</span></h6>
 										<span class="text-capitalize fw-light d-inline-block mb-2"
 											>Sale Upto
 											<strong class="fw-bold">
@@ -1350,9 +1346,7 @@
 								<div class="card pt-0">
 									<img class="d-block w-100 position-relative" src="src/images/three-3.jpg" alt="Image here" />
 									<div class="caption position-absolute">
-										<h6 class="text-primary">
-											$645.00 <span class="text-muted fw-light"><strike>$759.99</strike></span>
-										</h6>
+										<h6 class="text-primary">$645.00 <span class="text-muted fw-light line-through">$759.99</span></h6>
 										<span class="text-capitalize fw-light d-inline-block mb-2"
 											>Sale Upto
 											<strong class="fw-bold">
@@ -1372,7 +1366,7 @@
 		</main>
 
 		<!-- Main without Aside and Article -->
-		<main class="clearfix">
+		<div class="clearfix">
 			<div class="container">
 				<!-- Electronics Section -->
 				<div class="row block-product pl-0">
@@ -2039,7 +2033,7 @@
 					</div>
 				</div>
 			</div>
-		</main>
+		</div>
 
 		<!-- Footer -->
 		<footer>
@@ -2113,7 +2107,7 @@
 								</li>
 								<li class="list-unstyled">
 									<div class="input-group">
-										<input type="text" class="form-control" placeholder="Enter Your Email" aria-describedby="basic-addon2" />
+										<input type="text" class="form-control" placeholder="Enter Your Email" />
 										<span class="input-group-text text-uppercase">subscribe</span>
 									</div>
 								</li>
