Committing for checkout

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 	<body>
 		<!-- Promotional Image -->
 		<div class="container-fluid promotional-image">
-			<img class="position-relative w-100" src="./images/img-promotion_2048x.jpg" alt="Promotional Image here" class="img-fluid" />
+			<img class="position-relative w-100" src="./images/img-promotion_2048x.jpg" alt="Promotional Image here" />
 			<h5 class="close-btn position-absolute mt-3 mx-4 top-0 end-0 fw-bold pull-right">&times</h5>
 		</div>
 
