Validation errors removed

--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@
 		</main>
 
 		<!-- Main without Aside and Article -->
-		<div class="clearfix">
+		<main class="clearfix">
 			<div class="container">
 				<!-- Electronics Section -->
 				<div class="row block-product pl-0">
@@ -2033,7 +2033,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</main>
 
 		<!-- Footer -->
 		<footer>
