--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="node_modules/fontawesome-4.7/css/font-awesome.min.css" />
-		<link rel="stylesheet" href="lib/flag-icon-css/css/flag-icons.min.css" />
-		<link rel="stylesheet" href="lib/css/slick-theme.css" />
-		<link rel="stylesheet" href="lib/css/slick.css" />
+		<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../node_modules/fontawesome-4.7/css/font-awesome.min.css" />
 
-		<link rel="stylesheet" href="dist/css/theme.css" />
+		<link rel="stylesheet" href="../lib/css/slick-theme.css" />
+		<link rel="stylesheet" href="../lib/css/slick.css" />
+
+		<link rel="stylesheet" href="../dist/css/theme.css" />
 		<title>Smart Market</title>
 	</head>
 
@@ -2133,11 +2133,9 @@
 			</div>
 		</footer>
 
-		<!-- <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script> -->
-		<!-- <script type="text/javascript" src="lib/js/slick.min.js"></script> -->
-		<!-- <script type="text/javascript" src="./js/script.js"></script> -->
+		<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="../dist/js/bundle.js"></script>
-		<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script>
 			$(".close-btn").click(function () {
 				$(".promotional-image").addClass("d-none");
