--- a/src/plp.html
+++ b/src/plp.html
@@ -408,7 +408,7 @@
 							<div class="col-md-8">
 								<div class="row">
 									<div class="col-md-4">
-										<img class="w-100 h-100" src="./images/plp.jpg" alt="Image here" />
+										<img class="position-relative w-100 h-100" src="./images/plp.jpg" alt="Image here" />
 									</div>
 									<div class="plp-body col-md-8 border-end">
 										<span class="fs-14 d-inline-block title pb-1 text-capitalize">ASICS Gel Lyte III "Denim" Pack</span>
