Webpack devserver configured

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../node_modules/fontawesome-4.7/css/font-awesome.min.css" />
+		<link type="text/css" rel="stylesheet" href="../node_modules/fontawesome-4.7/css/font-awesome.min.css" />
+		<link type="text/css" rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-		<link rel="stylesheet" href="../lib/css/slick-theme.css" />
-		<link rel="stylesheet" href="../lib/css/slick.css" />
+		<link type="text/css" rel="stylesheet" href="../lib/css/slick-theme.css" />
+		<link type="text/css" rel="stylesheet" href="../lib/css/slick.css" />
 
 		<link rel="stylesheet" href="../dist/css/theme.css" />
 		<title>Smart Market</title>
@@ -2133,8 +2133,8 @@
 			</div>
 		</footer>
 
-		<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+		<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="../dist/js/bundle.js"></script>
 		<script>
 			$(".close-btn").click(function () {
