--- a/src/index.html
+++ b/src/index.html
@@ -116,8 +116,8 @@
 														<li>
 															<a href="#" class="navbar-head fs-13 text-white text-uppercase">Computer</a>
 														</li>
-														<li class="mt-3 py-1"><a href="#" class="text-muted text-decoration-none">Notebook PC</a></li>
-														<li class="py-1"><a href="#" class="text-muted text-decoration-none">All In One PC</a></li>
+														<li class="mt-3 py-1"><a href="pdp.html" class="text-muted text-decoration-none">Notebook PC</a></li>
+														<li class="py-1"><a href="plp.html" class="text-muted text-decoration-none">All In One PC</a></li>
 														<li class="py-1"><a href="#" class="text-muted text-decoration-none">Ultrabook</a></li>
 														<li class="py-1"><a href="#" class="text-muted text-decoration-none">Hybrib Laptop</a></li>
 														<li class="mb-3 py-1"><a href="#" class="text-muted text-decoration-none">Mobile WorkStation</a></li>
@@ -237,7 +237,7 @@
 										></a>
 										<div class="dropdown-content bg-dark">
 											<ul class="pages list-unstyled fw-normal fs-14 text-start px-2 text-white">
-												<li class="mt-3 py-1"><a href="#" class="text-muted text-decoration-none">Faqs</a></li>
+												<li class="mt-3 py-1"><a href="faqs.html" class="text-muted text-decoration-none">Faqs</a></li>
 												<li class="py-1"><a href="#" class="text-muted text-decoration-none">Blog</a></li>
 												<li class="py-1"><a href="#" class="text-muted text-decoration-none">Contact</a></li>
 												<li class="py-1"><a href="#" class="text-muted text-decoration-none">About Us</a></li>
