blog page complete

--- a/src/blog.html
+++ b/src/blog.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="../lib/css/slick.css" />
 
 		<link rel="stylesheet" href="../dist/css/theme.css" />
-		<title>Smart Market - FAQs</title>
+		<title>Smart Market - Blogs</title>
 	</head>
 
 	<body>
@@ -263,7 +263,7 @@
 			</nav>
 		</div>
 
-		<!-- All Department row-->
+		<!-- Main With Aside and Article-->
 		<main class="clearfix">
 			<div class="container">
 				<div class="row pl-0">
@@ -275,7 +275,7 @@
 						</div>
 					</aside>
 					<!-- Article -->
-					<article>
+					<article class="mb-4">
 						<!-- All departments Tab -->
 						<div class="all-departments row">
 							<div class="px-0 col-md-8">
@@ -305,111 +305,110 @@
 			</div>
 		</main>
 
-		<!-- FAQs -->
-		<main class="clearfix">
+		<main>
 			<div class="container">
-				<div class="row pl-0 faq">
-					<h2 class="text-uppercase fw-normal">Faq</h2>
-					<p class="mb-4 pb-4 fs-14">This is sub heading text to describe the page functionality</p>
-					<div class="faqs-list">
-						<ul class="list-unstyled">
-							<li data-bs-toggle="collapse" href="#collapseExample" class="clearfix border-top border-bottom pt-2">
-								<div class="btn bg-danger d-inline-block border-0 btn-primary fs-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-									<span>Question</span>
-								</div>
-								<p class="ms-3 fs-14 d-inline-block">What are the paymeny methods can i use in the site ?</p>
-								<span class="text-muted text-uppercase fs-12 pt-1 pe-3 pull-right">show</span>
+				<div class="row">
+					<div class="col-md-12 fs-14 current-tab"><span>Home </span>/ <span> News</span></div>
+					<div class="col-md-3">
+						<!-- Categories -->
+						<div class="block-title">
+							<h2 class="fs-18 text-uppercase">Recent post</h2>
+							<div class="mt-4 pt-1">
+								<ul class="fs-14 text-capitalize list-unstyled">
+									<li class="py-3">
+										<span class="fs-12 fw-normal text-muted"><em>Posted Nov 14, 2017</em></span>
+										<a href="#" class="d-block pt-1 text-dark text-decoration-none text-uppercase fw-normal fs-15 letterspace"
+											>The Personality Trait That Makes People Happier</a
+										>
+									</li>
+									<li class="py-3">
+										<span class="fs-12 fw-normal text-muted"><em>Posted Nov 14, 2017</em></span>
+										<a href="#" class="d-block pt-1 text-dark text-decoration-none text-uppercase fw-normal fs-15 letterspace"
+											>The Personality Trait That Makes People Happier</a
+										>
+									</li>
+									<li class="py-3">
+										<span class="fs-12 fw-normal text-muted"><em>Posted Nov 14, 2017</em></span>
+										<a href="#" class="d-block pt-1 text-dark text-decoration-none text-uppercase fw-normal fs-15 letterspace"
+											>The Personality Trait That Makes People Happier</a
+										>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-9">
+						<!-- Blog 1 -->
+						<div class="row ms-4 pt-2 pb-4 my-2">
+							<div class="col-md-5">
+								<img class="w-100 h-100" src="./images/blog1_large.jpg" alt="Image here" />
+							</div>
+							<div class="plp-body col-md-7 border-end">
+								<span href="#" class="d-block pt-1 text-dark text-decoration-none text-uppercase fw-normal fs-15 letterspace"
+									>The Personality Trait That Makes People Happier</span
+								>
+								<span class="fs-13 fw-normal text-muted"
+									><em><i class="fa fa-calendar pe-2"></i>Posted Nov 14, 2017</em></span
+								>
+								<span class="ms-4 fs-13 fw-normal text-muted"
+									><em><i class="fa fa-user-o pe-2"></i>By: Hoang Nt</em></span
+								>
 
-								<div class="collapse" id="collapseExample">
-									<div class="card card-body fs-14 border-0">
-										Mauris in quam tristique, dignissim urna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis.
-										Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in,
-										molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet,
-										eros est egestas odio, at aliquet elit nulla sed.
-									</div>
-								</div>
-							</li>
-							<li data-bs-toggle="collapse" href="#collapseExample1" class="clearfix border-top border-bottom pt-2">
-								<div class="btn bg-danger d-inline-block border-0 btn-primary fs-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-									<span>Question</span>
-								</div>
-								<p class="ms-3 fs-14 d-inline-block">Do I have to register in your site ?</p>
-								<span class="text-muted text-uppercase fs-12 pt-1 pe-3 pull-right">show</span>
+								<p class="fw-normal pt-2 pb-2 ls-half fs-14 pe-4 me-4">
+									Aene ultrice dolor varius conquat, enimo consea mass tortor, massa pellentesque euismod et vel purus. Proin at turpis lorem are...
+								</p>
 
-								<div class="collapse" id="collapseExample1">
-									<div class="card card-body fs-14 border-0">
-										Mauris in quam tristique, dignissim urna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis.
-										Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in,
-										molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet,
-										eros est egestas odio, at aliquet elit nulla sed.
-									</div>
-								</div>
-							</li>
-							<li data-bs-toggle="collapse" href="#collapseExample2" class="clearfix border-top border-bottom pt-2">
-								<div class="btn bg-danger d-inline-block border-0 btn-primary fs-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-									<span>Question</span>
-								</div>
-								<p class="ms-3 fs-14 d-inline-block">How to make Retina Ready designs ?</p>
-								<span class="text-muted text-uppercase fs-12 pt-1 pe-3 pull-right">show</span>
+								<a href="#" class="letterspace text-uppercase text-black border-bottom">Read more</a>
+							</div>
+						</div>
 
-								<div class="collapse" id="collapseExample2">
-									<div class="card card-body fs-14 border-0">
-										Mauris in quam tristique, dignissim urna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis.
-										Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in,
-										molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet,
-										eros est egestas odio, at aliquet elit nulla sed.
-									</div>
-								</div>
-							</li>
-							<li data-bs-toggle="collapse" href="#collapseExample3" class="clearfix border-top border-bottom pt-2">
-								<div class="btn bg-danger d-inline-block border-0 btn-primary fs-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-									<span>Question</span>
-								</div>
-								<p class="ms-3 fs-14 d-inline-block">How can i regisy in the site ?</p>
-								<span class="text-muted text-uppercase fs-12 pt-1 pe-3 pull-right">show</span>
+						<!-- Blog 2 -->
+						<div class="row ms-4 pt-2 pb-4 my-2">
+							<div class="col-md-5">
+								<img class="w-100 h-100" src="./images/blog2_large.jpg" alt="Image here" />
+							</div>
+							<div class="plp-body col-md-7 border-end">
+								<span href="#" class="d-block pt-1 text-dark text-decoration-none text-uppercase fw-normal fs-15 letterspace"
+									>The Personality Trait That Makes People Happier</span
+								>
+								<span class="fs-13 fw-normal text-muted"
+									><em><i class="fa fa-calendar pe-2"></i>Posted Nov 14, 2017</em></span
+								>
+								<span class="ms-4 fs-13 fw-normal text-muted"
+									><em><i class="fa fa-user-o pe-2"></i>By: Hoang Nt</em></span
+								>
 
-								<div class="collapse" id="collapseExample3">
-									<div class="card card-body fs-14 border-0">
-										Mauris in quam tristique, dignissim urna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis.
-										Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in,
-										molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet,
-										eros est egestas odio, at aliquet elit nulla sed.
-									</div>
-								</div>
-							</li>
-							<li data-bs-toggle="collapse" href="#collapseExample4" class="clearfix border-top border-bottom pt-2">
-								<div class="btn bg-danger d-inline-block border-0 btn-primary fs-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-									<span>Question</span>
-								</div>
-								<p class="ms-3 fs-14 d-inline-block">What are the paymeny methods can i use in the site ?</p>
-								<span class="text-muted text-uppercase fs-12 pt-1 pe-3 pull-right">show</span>
+								<p class="fw-normal pt-2 pb-2 ls-half fs-14 pe-4 me-4">
+									Aene ultrice dolor varius conquat, enimo consea mass tortor, massa pellentesque euismod et vel purus. Proin at turpis lorem are...
+								</p>
 
-								<div class="collapse" id="collapseExample4">
-									<div class="card card-body fs-14 border-0">
-										Mauris in quam tristique, dignissim urna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis.
-										Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in,
-										molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet,
-										eros est egestas odio, at aliquet elit nulla sed.
-									</div>
-								</div>
-							</li>
-							<li data-bs-toggle="collapse" href="#collapseExample5" class="clearfix border-top border-bottom pt-2">
-								<div class="btn bg-danger d-inline-block border-0 btn-primary fs-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-									<span>Question</span>
-								</div>
-								<p class="ms-3 fs-14 d-inline-block">What are the paymeny methods can i use in the site ?</p>
-								<span class="text-muted text-uppercase fs-12 pt-1 pe-3 pull-right">show</span>
+								<a href="#" class="letterspace text-uppercase text-black border-bottom">Read more</a>
+							</div>
+						</div>
 
-								<div class="collapse" id="collapseExample5">
-									<div class="card card-body fs-14 border-0">
-										Mauris in quam tristique, dignissim urna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis.
-										Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in,
-										molestie felis. Fusce tristique, elit nec vehicula imperdiet, erosurna in, molestie felis. Fusce tristique, elit nec vehicula imperdiet,
-										eros est egestas odio, at aliquet elit nulla sed.
-									</div>
-								</div>
-							</li>
-						</ul>
+						<!-- Blog 3 -->
+						<div class="row ms-4 pt-2 pb-4 my-2">
+							<div class="col-md-5">
+								<img class="w-100 h-100" src="./images/blog3_large.jpg" alt="Image here" />
+							</div>
+							<div class="plp-body col-md-7 border-end">
+								<span href="#" class="d-block pt-1 text-dark text-decoration-none text-uppercase fw-normal fs-15 letterspace"
+									>The Personality Trait That Makes People Happier</span
+								>
+								<span class="fs-13 fw-normal text-muted"
+									><em><i class="fa fa-calendar pe-2"></i>Posted Nov 14, 2017</em></span
+								>
+								<span class="ms-4 fs-13 fw-normal text-muted"
+									><em><i class="fa fa-user-o pe-2"></i>By: Hoang Nt</em></span
+								>
+
+								<p class="fw-normal pt-2 pb-2 ls-half fs-14 pe-4 me-4">
+									Aene ultrice dolor varius conquat, enimo consea mass tortor, massa pellentesque euismod et vel purus. Proin at turpis lorem are...
+								</p>
+
+								<a href="#" class="letterspace text-uppercase text-black border-bottom">Read more</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
