Contact and About us pages complete

--- a/src/index.html
+++ b/src/index.html
@@ -239,8 +239,8 @@
 											<ul class="pages list-unstyled fw-normal fs-14 text-start px-2 text-white">
 												<li class="mt-3 py-1"><a href="faqs.html" class="text-muted text-decoration-none">Faqs</a></li>
 												<li class="py-1"><a href="blog.html" class="text-muted text-decoration-none">Blog</a></li>
-												<li class="py-1"><a href="faqs.html" class="text-muted text-decoration-none">Contact</a></li>
-												<li class="py-1"><a href="faqs.html" class="text-muted text-decoration-none">About Us</a></li>
+												<li class="py-1"><a href="contact.html" class="text-muted text-decoration-none">Contact</a></li>
+												<li class="py-1"><a href="aboutus.html" class="text-muted text-decoration-none">About Us</a></li>
 												<li class="mb-3 py-1"><a href="faqs.html" class="text-muted text-decoration-none">Lookbook</a></li>
 											</ul>
 										</div>
