--- a/src/aboutus.html
+++ b/src/aboutus.html
@@ -317,7 +317,7 @@
 				<img class="w-100 h-100" src="https://cdn.shopify.com/s/files/1/2506/1620/files/about-top_2048x.png?v=1512979199" alt="Banner here" />
 				<div class="container banner-text position-absolute">
 					<div class="text-center">
-						<h1>Wellcome To SmartMarket</h1>
+						<h1>Welcome To SmartMarket</h1>
 						<p class="fs-18">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
 				</div>
@@ -328,7 +328,99 @@
 					<div class="col-md-6">
 						<img class="w-100 h-100" src="//cdn.shopify.com/s/files/1/2506/1620/files/about-main_2048x.png?v=1512979208" />
 					</div>
-					<div class="col-md-6 mb-4"></div>
+					<div class="col-md-6 mb-4">
+						<h4 class="mt-4 pt-4 pb-2 d-inline-block">Why Choose Us?</h4>
+						<div class="accordion" id="accordionExample">
+							<div class="accordion-item">
+								<h4 class="accordion-header" id="headingOne">
+									<button
+										class="accordion-button bg-darkgray text-white fs-14 rounded-0"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseOne"
+										aria-expanded="true"
+										aria-controls="collapseOne"
+									>
+										Accordion Item #1
+									</button>
+								</h4>
+								<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+									<div class="accordion-body">
+										<span class="fs-14"
+											>This is the third item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to
+											style each element.</span
+										>
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h4 class="accordion-header" id="headingTwo">
+									<button
+										class="accordion-button collapsed bg-darkgray text-white fs-14 rounded-0"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseTwo"
+										aria-expanded="false"
+										aria-controls="collapseTwo"
+									>
+										Accordion Item #2
+									</button>
+								</h4>
+								<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+									<div class="accordion-body">
+										<span class="fs-14"
+											>This is the third item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to
+											style each element.</span
+										>
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h4 class="accordion-header" id="headingThree">
+									<button
+										class="accordion-button collapsed bg-darkgray text-white fs-14 rounded-0"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseThree"
+										aria-expanded="false"
+										aria-controls="collapseThree"
+									>
+										Accordion Item #3
+									</button>
+								</h4>
+								<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+									<div class="accordion-body">
+										<span class="fs-14"
+											>This is the third item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to
+											style each element.</span
+										>
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h4 class="accordion-header" id="headingFour">
+									<button
+										class="accordion-button collapsed bg-darkgray text-white fs-14 rounded-0"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseFour"
+										aria-expanded="false"
+										aria-controls="collapseFour"
+									>
+										Accordion Item #4
+									</button>
+								</h4>
+								<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+									<div class="accordion-body">
+										<span class="fs-14"
+											>This is the third item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to
+											style each element.</span
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -336,8 +428,8 @@
 				<div class="row contact-row">
 					<iframe
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61092.28050954644!2d74.4703528531626!3d31.505210772672875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391904b9ad89274f%3A0x5c443176defc6407!2sSystems%20Limited!5e0!3m2!1sen!2s!4v1638789476856!5m2!1sen!2s"
-						width="1370"
-						height="360"
+						width="1140"
+						height="510"
 						style="border: 0"
 						allowfullscreen=""
 						loading="lazy"
